# nes_emulator

./: Cargo.toml
src/: addressing_mode.rs  cpu.rs
tests/: tests.rs
