[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/cpu.rs"

[[bin]]
name = "nes_emulator"
path = "src/main.rs"

[[test]]
name = "test"
path = "tests/test.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
